syntax = "proto3";


package register;


option go_package = "schema/register";

message RegisterRequest {
    string ip = 1;
    string file_port = 2;
    string replication_port = 3;
    string NotifyToCopyPort = 4;

}
message RegisterResponse {
    uint32 id = 1;
    bool success = 2;
}

service RegisterService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}
